public/css/home.css
body {
    margin: 0;

    display: flex;
    flex-flow: column;
    height: 100%;
}

/* Topbar */
.topbar {
    overflow: hidden;
    display: flex;
    justify-content: space-between;
}

.div-topbar-group {
    display: flex;
}

.topbar-group-left {
    justify-content: left;
}

.topbar-group-center {
    justify-content: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 50%;
    height: 50px;
}

.topbar .btn {
    padding: 5px;
    margin: 8px 0px 8px 8px;
    background-color: var(--btn-inset);
    border: 1px solid var(--border-color);
}

.topbar input {
    margin: 8px;
    border: 0;
    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.25);
    font-size: medium;
}

/* The thing below the topbar */
.panel-main  {
    width: 100%;
    display: flex;

    flex-grow: 1;
}

/* left panel */

.panel-left {
    background-color: var(--bg-outset);
    width: 25%;
    height: 100%;
}

/* buttons */
.btn-story-select {
    background-color: rgba(0, 0, 0, 0);
    border: 0;
    width: 100%;
    color: white;
}

.btn-story-select:hover {
    background-color: rgba(255, 255, 255, 0.25);
}

/* text field */
.panel-middle {
    width: 45%;
    height: 95%;
    margin: auto;
}

.panel-middle textarea {
    width: 100%;
    height: 100%;
    resize: none;
    background-color: var(--btn-inset);
    border: 0;
    padding: 10px;
    color: white;

    border-radius: 12px;
    border: 1px solid var(--border-color)
}

/* Right panel */

.panel-right {
    width: 25%;
}

/* Story overview */
.btn-story-panel {
    margin: 10px auto;
    padding: 8px 10px 8px 10px;
}

